--- a/graph_style.css
+++ b/graph_style.css
@@ -67,3 +67,13 @@ button.year_2021:hover {
   background-color: orange;
   color: white;
 }
+
+#info {
+  position: fixed;
+  top: 150px;
+  right: 70px;
+  border: 1px dotted black;
+  width: 15em;
+  padding: 0.25em;
+  margin: 1em;
+}
